parser/tests/bad/for01-7.st
% range of a 'for' statement must have type 'int'
%   decreasing, id, begin

for decreasing i: 3.0..1
  % empty
end for
